--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
       </li>
       <li class="nav-item">
         <button class="btn btn-warning sign__up" type="button" *ngIf="userService.currentUser.token && userService.currentUser.type !== 'ADMIN'"
-                (click)="addNewAd()">Adaug&#259; Anun&#539;</button>
+                (click)="addNewAd()">Adaug&#259; anun&#539;</button>
       </li>
       <li class="nav-item">
         <a routerLink="/userList">
