--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -15,7 +15,7 @@
       <mat-card-content>Preț: {{ ad.price }} <span class="fa fa-euro"></span></mat-card-content>
       <img mat-card-image height="300px"  [src]="ad.image">
       <mat-card-actions class="ad__buttons">
-        <button mat-raised-button mat-button color="primary" (click)="viewAdDetails(ad)">Vizualizează anunt</button>
+        <button mat-raised-button mat-button color="primary" (click)="viewAdDetails(ad)">Detalii anunț</button>
         <button mat-raised-button mat-button color="warn" (click)="deleteAd(ad)">Șterge anunțul</button>
       </mat-card-actions>
     </mat-card><br>
