--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -20,7 +20,7 @@
       <textarea type="text" placeholder="Descriere..." matInput matTextareaAutosize matAutosizeMinRows=1 matAutosizeMaxRows=10 formControlName="description" autocomplete="off"></textarea>
     </mat-form-field>
     <mat-form-field>
-      <input type="number" placeholder="Suprafață..." matInput formControlName="surface" autocomplete="off">
+      <input type="number" placeholder="Suprafață(mp)..." matInput formControlName="surface" autocomplete="off">
     </mat-form-field>
     <div *ngIf="addNewAdForm.get('adItemType').value === 'Apartament'">
       <mat-form-field>
@@ -41,7 +41,7 @@
     </div>
     <div *ngIf="addNewAdForm.get('adItemType').value === 'Casa'">
       <mat-form-field>
-        <input type="number" placeholder="Suprafață utilă..." matInput formControlName="areaSurface" autocomplete="off">
+        <input type="number" placeholder="Suprafață utilă(mp)..." matInput formControlName="areaSurface" autocomplete="off">
       </mat-form-field>
     </div>
     <mat-form-field>
@@ -68,7 +68,7 @@
       <button class="btn btn-info">Preț maxim sugerat: {{ adSuggestedMaxPrice.toFixed(0) }}</button>
     </div>
     <mat-form-field>
-      <input type="number" placeholder="Preț..." matInput formControlName="price" autocomplete="off">
+      <input type="number" placeholder="Preț(euro)..." matInput formControlName="price" autocomplete="off">
     </mat-form-field>
     <label> Imagini... (PNG/JPG/...):</label>
     <br>
